Bug fix for image links

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Google</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   </head>
 
   <body>
@@ -38,7 +38,7 @@
           <a href="https://www.google.com/search?sxsrf=ACYBGNRM5BKaFtz
             c8ImQVtc84KPha98qww:1569634276955&q=Google&oi=ddle&ct=119276371&hl=
             en&kgmid=/m/045c7b&sa=X&ved=0ahUKEwj9_4Gsr_LkAhUGTt8KHYN1CbIQPQgO">
-            <img alt="Google" id="logo" src="/images/google.png">
+            <img alt="Google" id="logo" src="images/google.png">
           </a>
         </div>
         <div id="searchForm">
@@ -58,7 +58,7 @@
               </form>
             </div>
             <div id="searchMicBox">
-              <img id="searchMic" alt="Search with Google" src="/images/googlemic_color_24dp.png">
+              <img id="searchMic" alt="Search with Google" src="images/googlemic_color_24dp.png">
             </div>
           </div>
           <div id="searchButtonBox">
