--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
       <div id="footer">
         <div id="fBar">
           <div id="botLeftLinks">
-            <a class="fLink" href="https://mail.google.com/mail/?tab=wm&ogbl">
+            <a class="fLink" href="https://ads.google.com/intl/en_us/home/?subid
+              =ww-ww-et-g-awa-a-g_hpafoot1_1!o2&utm_source=google.com&utm_medium
+              =referral&utm_campaign=google_hpafooter&fg=1">
               Advertising</a>
             <a class="fLink" href="https://www.google.com/services/?subid=ww-ww-
               et-g-awa-a-g_hpbfoot1_1!o2&utm_source=google.com&utm_medium=referral
