--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a class="hLink" href="https://www.google.com/imghp?hl=en&tab=wi&ogbl">
             Images</a>
           <a class="hLink" id="appsIcon" href="#" onclick="return false;" title="Google Apps" role="button"></a>
-          <a class="hLink" id="signIn" onclick="return false;" href="https://accounts.google.com/ServiceLogin?hl=en&amp;passive=true
+          <a class="hLink" id="signIn" href="https://accounts.google.com/ServiceLogin?hl=en&amp;passive=true
             &amp;continue=https://www.google.com/%3Fgws_rd%3Dssl" target="_top">
             Sign in</a>
         </div>
